=======
CHANGES
=======

3.10.1 (unreleased)
-------------------

- Nothing changed yet.


3.10.0 (2010-09-14)
-------------------

- LP #98437: use mechanize's built-in ``submit()`` to submit forms, allowing
  mechanize to set the "Referer:" (sic) header appropriately.

- Fixed tests to run with ``zope.app.testing`` 3.8 and above.


3.9.0 (2010-05-17)
------------------

- LP #568806: Update dependency ``mechanize >= 0.2.0``, which now includes
  the ``ClientForm`` APIs.  Remove use of ``urllib2`` APIs (incompatible
  with ``mechanize 0.2.0``) in favor of ``mechanize`` equivalents.
  Thanks to John J. Lee for the patch.

- Use stdlib ``doctest`` module, instead of ``zope.testing.doctest``.

- **Caution:** This version is no longer fully compatible with Python 2.4:
  ``handleErrors = False`` no longer works.


3.8.1 (2010-04-19)
------------------

- Pinned dependency on mechanize to prevent use of the upcoming
  0.2.0 release before we have time to adjust to its API changes.

- LP #98396: testbrowser resolves relative URLs incorrectly.


3.8.0 (2010-03-05)
------------------

- Added ``follow`` convenience method which gets and follows a link.


3.7.0 (2009-12-17)
------------------

- Moved zope.app.testing dependency into the scope of the PublisherConnection
  class. Zope2 specifies its own PublisherConnection which isn't dependent on
  zope.app.testing.

- Fixed LP #419119: return None when the browser has no contents instead of
  raising an exception.


3.7.0a1 (2009-08-29)
--------------------

- Remove dependency on zope.app.publisher in favor of zope.browserpage,
  zope.browserresource and zope.ptresource.

- Remove dependencies on zope.app.principalannotation and zope.securitypolicy
  by using the simple PermissiveSecurityPolicy. We aren't testing security
  in our tests.

- Replaced the testing dependency on zope.app.zcmlfiles with explicit
  dependencies of a minimal set of packages.

- Remove unneeded zope.app.authentication from ftesting.zcml.
